
Bugs to Fix

   * superposition system fails with degenerate sets (planer atoms, etc).
     sometimes it just fails period.

Changes up to 0.64

   * LOG FILE CAPABILITIES:  logging of both PyMOL scripts (.pml) and
     PyMOL program files (.pym). The "resume" command allows propagation
     of session-like behavior.  This makes a huge difference in PyMOL
     user-friendliness.

   * mesh_radius cut in half, for better default density figures

   * carve command on isomesh

   * .pymolrc and .pymolrc.py(m) support
 
   * isosurface speed boosted by about 33% using C-oriented field object.

   * fixed bugs with internal_gui options
 
   * internal_feedback setting

   * simple cartoon ribbon for DNA/RNA

   * selection language now supports '+' as substitute for commas, and '-'
     as substitute for ':' in residue identifiers (more user friendly)

   * selections no longer require parentheses unless they have commas or
     semicolons

   * unit cell display for molecules and meshes

Changes up to 0.63

   * Density wizard

   * isomesh meshes now use mesh_width instead of line_width

   * fixed rendering background color bug on BigEndian machines

   * fixed fatal bug with symexp

   * first attempt at support for CCP4's binary maps -- it works with my
     test maps, but will it work with others?

Changes up to 0.62

   * tuned up the util.ray_shadows function, added a "matte" mode for better
     definition of ribbons...

   * integrated workaround for an apparent GCC serial optimizer bug on x86.

Changes up to 0.61

   * bg_color command for easier background adjustments...

   * depth cue menu item and ray_trace_fog linked

   * cartoon_discrete_colors hack for coloring secondary structure properly

   * (ss ...) primitive in selector for selecting helices, etc.

   * many cartoon ribbons improvements -- flat fancy sheets now VERY nice.

Changes up to 0.60

   * third generation fancy helices complete -- revamped interpolation code.
